Fix a bug in AttributionWindow on mobile

--- a/src/windows/AttributionWindow/stylesheet.scss
+++ b/src/windows/AttributionWindow/stylesheet.scss
@@ -19,23 +19,19 @@
         border-bottom: none;
       }
 
-      .icon {
-        position: relative;
+      .transparent {
         width: 4rem;
         height: 4rem;
-        background-position: center;
-        background-size: contain;
-        background-repeat: no-repeat;
+        background: url(images/transparent.png) repeat top left;
+        background-size: 8px 8px;
         margin-right: 1rem;
 
-        &:before {
-          content: '';
-          position: absolute;
+        .icon {
           width: 100%;
           height: 100%;
-          background: url(images/transparent.png) repeat top left;
-          background-size: 8px 8px;
-          z-index: -1;
+          background-position: center;
+          background-size: contain;
+          background-repeat: no-repeat;
         }
       }
 
@@ -74,7 +70,7 @@
     .row {
       flex-direction: column;
 
-      .icon {
+      .transparent {
         margin-right: 0;
       }
 
